--- a/package.json
+++ b/package.json
@@ -1,15 +1,24 @@
 {
   "name": "chainx2-scan",
   "version": "1.0.0",
-  "main": "index.js",
-  "license": "MIT",
+  "private": true,
+  "workspaces": [
+    "packages/*"
+  ],
   "devDependencies": {
-    "@types/mongodb": "^3.5.25",
-    "cross-env": "^7.0.2"
+    "husky": "^1.3.1",
+    "lint-staged": "^8.1.4",
+    "prettier": "^1.16.4"
   },
-  "dependencies": {
-    "@polkadot/api": "^1.22.1",
-    "@polkadot/util": "^2.16.1",
-    "mongodb": "^3.5.9"
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.{js,json,css,md}": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
