Add blocks table

--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -4,12 +4,14 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.9.0",
+    "@reduxjs/toolkit": "^1.4.0",
     "@svgr/webpack": "4.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@typescript-eslint/eslint-plugin": "^2.10.0",
     "@typescript-eslint/parser": "^2.10.0",
+    "antd": "^4.4.2",
     "babel-eslint": "10.1.0",
     "babel-jest": "^24.9.0",
     "babel-loader": "8.1.0",
@@ -18,7 +20,9 @@
     "bulma": "^0.9.0",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
+    "classnames": "^2.2.6",
     "css-loader": "3.4.2",
+    "dayjs": "^1.8.29",
     "dotenv": "8.2.0",
     "dotenv-expand": "5.1.0",
     "eslint": "^6.6.0",
@@ -50,10 +54,16 @@
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
+    "redux": "^4.0.5",
     "resolve": "1.15.0",
     "resolve-url-loader": "3.1.1",
+    "rxjs": "^6.6.0",
     "sass-loader": "8.0.2",
     "semver": "6.3.0",
+    "string-template": "^1.0.0",
     "style-loader": "0.23.1",
     "styled-components": "^5.1.1",
     "terser-webpack-plugin": "2.3.5",
@@ -65,7 +75,7 @@
     "workbox-webpack-plugin": "4.3.1"
   },
   "scripts": {
-    "start": "node scripts/start.js",
+    "start": "PORT=3006 node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
