--- a/packages/scan/package.json
+++ b/packages/scan/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@polkadot/api": "^1.22.1",
     "@polkadot/util": "^2.16.1",
+    "@polkadot/util-crypto": "^2.18.1",
     "mongodb": "^3.5.9"
   }
 }
