--- a/packages/scan/package.json
+++ b/packages/scan/package.json
@@ -8,9 +8,9 @@
     "cross-env": "^7.0.2"
   },
   "dependencies": {
-    "@polkadot/api": "^1.22.1",
-    "@polkadot/util": "^2.16.1",
-    "@polkadot/util-crypto": "^2.18.1",
+    "@chainx-v2/api": "0.0.12",
+    "@chainx-v2/util": "0.0.12",
+    "@chainx-v2/crypto": "0.0.12",
     "mongodb": "^3.5.9"
   }
 }
