--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -56,7 +56,7 @@
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
-    "react-intl": "^5.8.0",
+    "react-intl": "2.8.0",
     "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
