--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -2,6 +2,9 @@
   "name": "@chainx2/scan-server",
   "version": "1.0.0",
   "private": true,
+  "scripts": {
+    "start": "node src/index.js"
+  },
   "dependencies": {
     "@koa/cors": "^3.1.0",
     "dotenv": "^8.2.0",
