--- a/packages/scan/package.json
+++ b/packages/scan/package.json
@@ -15,6 +15,8 @@
     "@chainx-v2/api": "0.0.24",
     "@chainx-v2/crypto": "0.0.24",
     "@chainx-v2/util": "0.0.24",
+    "bignumber.js": "^9.0.0",
+    "lodash": "^4.17.20",
     "log4js": "^6.3.0",
     "mongodb": "^3.5.9"
   }
