--- a/packages/scan/package.json
+++ b/packages/scan/package.json
@@ -11,10 +11,10 @@
     "start": "node src/index.js"
   },
   "dependencies": {
-    "@chainx-v2/account": "^0.0.24",
-    "@chainx-v2/api": "0.0.24",
-    "@chainx-v2/crypto": "0.0.24",
-    "@chainx-v2/util": "0.0.24",
+    "@chainx-v2/account": "^0.0.27",
+    "@chainx-v2/api": "^0.0.27",
+    "@chainx-v2/crypto": "^0.0.27",
+    "@chainx-v2/util": "^0.0.27",
     "bignumber.js": "^9.0.0",
     "lodash": "^4.17.20",
     "log4js": "^6.3.0",
