--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,7 +6,10 @@
     "start": "node src/index.js"
   },
   "dependencies": {
+    "@chainx-v2/account": "^0.0.24",
+    "@chainx-v2/api": "0.0.24",
     "@koa/cors": "^3.1.0",
+    "bignumber.js": "^9.0.0",
     "dotenv": "^8.2.0",
     "koa": "^2.13.0",
     "koa-bodyparser": "^4.3.0",
@@ -14,8 +17,6 @@
     "koa-logger": "^3.2.1",
     "koa-router": "^9.1.0",
     "mongodb": "^3.5.9",
-    "socket.io": "^2.3.0",
-    "@chainx-v2/account": "^0.0.24",
-    "@chainx-v2/api": "0.0.24"
+    "socket.io": "^2.3.0"
   }
 }
