--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,9 +6,11 @@
     "start": "node src/index.js"
   },
   "dependencies": {
-    "@chainx-v2/account": "^0.0.24",
-    "@chainx-v2/api": "0.0.24",
+    "@chainx-v2/account": "^0.0.27",
+    "@chainx-v2/api": "0.0.27",
     "@koa/cors": "^3.1.0",
+    "@polkadot/keyring": "^3.4.1",
+    "@polkadot/util": "^3.4.1",
     "bignumber.js": "^9.0.0",
     "dotenv": "^8.2.0",
     "koa": "^2.13.0",
