--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -4,8 +4,9 @@
   "private": true,
   "dependencies": {
     "@babel/core": "7.9.0",
-    "@chainx-v2/util": "0.0.24",
+    "@chainx-v2/util": "0.0.27",
     "@polkadot/keyring": "^2.18.1",
+    "@polkadot/util": "^3.4.1",
     "@reduxjs/toolkit": "^1.4.0",
     "@svgr/webpack": "4.3.3",
     "@testing-library/jest-dom": "^4.2.4",
