--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -6,8 +6,9 @@
     "start": "node src/index.js"
   },
   "dependencies": {
-    "@chainx-v2/account": "^0.0.27",
-    "@chainx-v2/api": "0.0.27",
+    "@chainx-v2/account": "^0.0.33",
+    "@chainx-v2/api": "^0.0.33",
+    "@polkadot/api": "^1.33.1",
     "@koa/cors": "^3.1.0",
     "@polkadot/keyring": "^3.4.1",
     "@polkadot/util": "^3.4.1",
