--- a/packages/scan/package.json
+++ b/packages/scan/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@chainx-v2/account": "^0.0.33",
     "@chainx-v2/api": "^0.0.33",
+    "@polkadot/api": "^1.33.1",
     "@polkadot/util-crypto": "^3.4.1",
     "@polkadot/util": "^3.4.1",
     "bignumber.js": "^9.0.0",
