--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -80,6 +80,7 @@
   },
   "scripts": {
     "start": "PORT=3007 node scripts/start.js",
+    "start-win": "set PORT=3007 && set REACT_APP_SERVER=http://localhost:3213 && node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
   },
