--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -19,7 +19,7 @@
     "babel-loader": "8.1.0",
     "babel-plugin-named-asset-import": "^0.3.6",
     "babel-preset-react-app": "^9.1.2",
-    "bizgoblin": "^0.2.0",
+    "bizcharts": "^4.0.14",
     "bulma": "^0.9.0",
     "camelcase": "^5.3.1",
     "case-sensitive-paths-webpack-plugin": "2.3.0",
