--- a/.github/workflows/ga.yml
+++ b/.github/workflows/ga.yml
@@ -1,14 +1,14 @@
-name: GitHub Action
+name: ChainX Explorer Deployment
 
 # Run this workflow every time a new commit pushed to your repository
-on: push
+on: [push, pull_request]
 
 jobs:
   # Set the job key. The key is displayed as the job name
   # when a job name is not provided
-  super-lint:
+  chainx2-scan-deploy:
     # Name the Job
-    name: SSH commands
+    name: Deploy release of chainx2-scan
     # Set the type of machine to run on
     runs-on: ubuntu-latest
 
@@ -17,18 +17,11 @@ jobs:
       # - name: Checkout code
       #  uses: actions/checkout@v2
 
-      # Runs the Super-Linter action
-      # - name: Run Super-Linter
-      #  uses: github/super-linter@v3
-      #  env:
-      #    DEFAULT_BRANCH: github-action
-      #    GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
       - name: Execute SSH commmands on remote server
-
         uses: JimCronqvist/action-ssh@master
         env:
           NAME: "Root"
+          BRANCH: "github-action"
         with:
           hosts: 'root@47.242.81.132'
           privateKey: ${{ secrets.PRIVATE_KEY }}
@@ -36,6 +29,11 @@ jobs:
           command: |
             ls -lah
             echo "I am $NAME"
-            mkdir test-github-action
-            cd test-github-action
-            touch test.js
+            cd chainx2-scan
+            pm2 status
+            free
+            htop
+            git pull
+            git diff --quiet HEAD $BRANCH -- packages/scan || pm2 restart 0
+            git diff --quiet HEAD $BRANCH -- packages/server || pm2 restart 1
+            git diff --quiet HEAD $BRANCH -- packages/site || pm2 restart 2
