--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-react-hooks": "^1.6.1",
     "file-loader": "4.3.0",
     "fs-extra": "^8.1.0",
+    "history": "^5.0.0",
     "html-webpack-plugin": "4.0.0-beta.11",
     "identity-obj-proxy": "3.0.0",
     "jest": "24.9.0",
@@ -57,6 +58,7 @@
     "react-app-polyfill": "^1.0.6",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
+    "react-ga": "^3.3.0",
     "react-intl": "2.8.0",
     "react-redux": "^7.2.0",
     "react-router": "^5.2.0",
