Add rate limit to koa server

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -18,6 +18,7 @@
     "koa-bodyparser": "^4.3.0",
     "koa-helmet": "^5.2.0",
     "koa-logger": "^3.2.1",
+    "koa-ratelimit": "^5.0.0",
     "koa-router": "^9.1.0",
     "mongodb": "^3.5.9",
     "socket.io": "^2.3.0"
