--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ant-design/icons": "^4.3.0",
     "@babel/core": "7.9.0",
     "@polkadot/keyring": "^3.6.1",
     "@polkadot/util": "^3.6.1",
