--- a/.github/workflows/action.yaml
+++ b/.github/workflows/action.yaml
@@ -39,7 +39,7 @@ jobs:
             git pull
             cd packages
             git diff --quiet HEAD server-temp -- scan || pm2 restart scan
-            git diff --quiet HEAD server-temp -- server || pm2 restart server && pm2 restart server-2 && pm2 restart server-3
+            # git diff --quiet HEAD server-temp -- server || pm2 restart server && pm2 restart server-2 && pm2 restart server-3
             git diff --quiet HEAD server-temp -- site || pm2 restart site
             git branch -d server-temp
             pm2 status
