Add gzip compress function to api server

--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -23,6 +23,7 @@
     "koa-helmet": "^5.2.0",
     "koa-logger": "^3.2.1",
     "koa-ratelimit": "^5.0.0",
+    "koa-compress": "^5.0.0",
     "koa-router": "^9.1.0",
     "mongodb": "^3.5.9",
     "socket.io": "^3.0.0"
