--- a/packages/site/package.json
+++ b/packages/site/package.json
@@ -8,6 +8,7 @@
     "@polkadot/keyring": "^3.6.1",
     "@polkadot/util": "^3.6.1",
     "@reduxjs/toolkit": "^1.4.0",
+    "@rumess/react-flip-countdown": "^1.1.2",
     "@svgr/webpack": "4.3.3",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -57,6 +58,7 @@
     "postcss-safe-parser": "4.0.1",
     "react": "^16.13.1",
     "react-app-polyfill": "^1.0.6",
+    "react-countdown": "^2.3.1",
     "react-dev-utils": "^10.2.1",
     "react-dom": "^16.13.1",
     "react-intl": "2.8.0",
